--- a/src/app/client-task/client-task.component.sass
+++ b/src/app/client-task/client-task.component.sass
@@ -14,6 +14,12 @@
   top: 0
   z-index: 1
 
+.box-shadow
+  box-shadow: inset -2px -2px 4px 4px white, -2px -2px 4px 4px white
+
+.table-header th
+  box-shadow: inset -1px -1px 0px white, 0px 0px 1px white
+
 .custom-max
   height: calc(100vh - 4rem)
   max-height: calc(100vh - 4rem)
