--- a/src/app/client/client.component.sass
+++ b/src/app/client/client.component.sass
@@ -9,16 +9,16 @@
     transform-origin: left center
     translate: 1rem
 
-.table-custom
-  border-collapse: separate
-  border-spacing: 0
-
 .table-header
   position: sticky
   top: 0
   z-index: 1
-  th
-    box-shadow: inset 1px -1px 0px 0px white
+
+.box-shadow
+  box-shadow: inset -2px -2px 4px 4px white, -2px -2px 4px 4px white
+
+.table-header th
+  box-shadow: inset -1px -1px 0px white, 0px 0px 1px white
 
 .custom-max
   height: calc(100vh - 4rem)
