add OnChanges() to client-task component

--- a/src/app/client-task/client-task.component.html
+++ b/src/app/client-task/client-task.component.html
@@ -57,7 +57,17 @@
             <tbody class="table-group-divider tbody-bordered">
                 @for (row of data; track $index) {
                 <tr class="" [hidden]="row.completed == characters.size && !showCompleted()">
-                    <td>{{ row.name }}</td>
+                    <td>
+                        @if (row.components > 0) {
+                            <button type="button" class="btn btn-custom p-0 align-top"
+                                [routerLink]="['/category',categoryID,'task',row.id,'achievement',achievementID]"
+                                [skipLocationChange]="true" routerLinkActive="active">{{ row.name }}
+                            </button>
+                            }
+                            @else {
+                            {{ row.name }}
+                            }
+                    </td>
                     <td class="text-center">{{ row.missing | number }}</td>
                     @for (v of row.data; track $index) {
                     <td class="text-center border-start border-end p-0">
