--- a/src/app/heroic/heroic.component.html
+++ b/src/app/heroic/heroic.component.html
@@ -36,9 +36,9 @@
                 </tr>
                 <tr class="">
                     @for (c of characters; track $index) {
-                    <th class="text-center border-0 p-0"><div placement="top" ngbTooltip="Fortitude">F</div></th>
-                    <th class="text-center border-0 p-0"><div placement="top" ngbTooltip="Resolution">R</div></th>
-                    <th class="text-center border-0 p-0"><div placement="top" ngbTooltip="Vitality">V</div></th>
+                    <th class="text-center border-0 p-0"><div placement="top" ngbTooltip="AA: Hero's Fortitude">F</div></th>
+                    <th class="text-center border-0 p-0"><div placement="top" ngbTooltip="AA: Hero's Resolution">R</div></th>
+                    <th class="text-center border-0 p-0"><div placement="top" ngbTooltip="AA: Hero's Vitality">V</div></th>
                     }
                 </tr>
             </thead>
