--- a/src/app/client-collects/client-collects.component.html
+++ b/src/app/client-collects/client-collects.component.html
@@ -2,18 +2,19 @@
     <div class="h-100 overflow-y-scroll overflow-x-hidden">
         <table class="table table-sm table-bordered table-fixed table-dark">
             <thead class="table-header box-shadow" scope="col">
-                <tr class="box-shadow">
+                <tr class="box-shadow ">
                     <td [colSpan]="3 + characters.size">
                         <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" class="navbar p-0">
                             <ol class="breadcrumb">
-                                <li class="breadcrumb-item">{{ getCategoryName(category$)?.name }}</li>
+                                <li class="breadcrumb-item">{{ getCategoryName(categoryID)?.name }}</li>
                                 <li class="breadcrumb-item">
-                                    {{ getCategoryName(achievement$)?.name }}
-                                    <button type="button" class="btn btn-custom p-0 align-top"
-                                        [routerLink]="['/category',category$,'collect',achievement$]"
-                                        [skipLocationChange]="true" routerLinkActive="active">(all items)
-                                    </button>
+                                    <a class="btn-custom text-reset text-decoration-none"
+                                        [routerLink]="['/category',categoryID,'achievement',achievementID]"
+                                        [skipLocationChange]="true" routerLinkActive="active">{{
+                                        getCategoryName(achievementID)?.name }}
+                                    </a>
                                 </li>
+                                <li class="breadcrumb-item active" aria-current="page">All Items</li>
                             </ol>
                             <ol class="m-0">
                                 <li class="navbar">
@@ -43,24 +44,21 @@
                     <th class="col-1 text-center">Completed</th>
                 </tr>
             </thead>
+            @if (data.length == 0) {
+            <tbody class="table-group-divider tbody-bordered">
+                <tr>
+                    <td [attr.colspan]="3 + characters.size" class="fs-2 text-center text-warning">No Data</td>
+                </tr>
+            </tbody>
+            }
+            @else {
             <tbody class="table-group-divider tbody-bordered">
                 @for (row of data; track $index) {
                 <tr class="" [hidden]="row.completed == characters.size && !showCompleted()">
-                    <td>
-                        @if (row.components > 1) {
-                        <button type="button" class="btn btn-custom p-0 align-top"
-                            [routerLink]="['/category',category$,'task',row.id,'achievement',achievement$]"
-                            [skipLocationChange]="true" routerLinkActive="active">{{ row.name }}
-                        </button>
-                        }
-                        @else {
-                        {{ row.name }}
-                        }
-                        ({{ row.points }} Points)
-                    </td>
+                    <td>{{ row.name }}</td>
                     <td class="text-center">{{ row.missing | number }}</td>
                     @for (v of row.data; track $index) {
-                    <td class="text-center p-0">
+                    <td class="text-center border-start border-end p-0">
                         <div class="text-center py-2"
                             [ngClass]="{'text-bg-success': v === 'C', 'text-bg-warning': v !== 'C' && v !== '', 'text-bg-dark': v === ''}">
                             {{ v }}
@@ -71,6 +69,7 @@
                 </tr>
                 }
             </tbody>
+            }
         </table>
     </div>
 </div>
