add info to click choose & load files

--- a/src/app/no-data/no-data.component.html
+++ b/src/app/no-data/no-data.component.html
@@ -4,5 +4,14 @@
     </div>
     <div class="text-center row g-0">
         <h3>No Everquest Achievement files loaded!</h3>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <ol>
+            <li>Click on the "Choose Files" button above, and pick your characters achievement files.</li>
+            <li>Click on the "Load Files" button to have your browser parse the files and display the achievements tables.</li>
+        </ol>
     </div>
 </div>
